examples/simple/violates-constraint/CV-CER2-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

int main() {
  register int x;
  int *y = &x;
  return 0;
}
